# PlotWeave

./: .env.example  .gitignore  README.md  agent.py  chapter.py  config.py  fs_utils.py  main.py  outline.py  project_instant.py  project_metadata.py  pyproject.toml  pyrightconfig.json  server.py  vector.py  world.py  writer.py  writer_agent.py
agent_tools/: chapter_tools.py  outline_tools.py  world_tools.py  writer_tools.py
webui/: .gitignore  package.json  vite.config.ts
webui/src/: App.tsx
webui/src/components/: ProjectCard.tsx  ProjectSidebar.tsx
webui/src/layouts/: ProjectLayout.tsx
webui/src/lib/: types.ts  utils.ts
webui/src/pages/: ChapterWritingPage.tsx  ChapteringPage.tsx  OutlinePage.tsx  ProjectListPage.tsx  WorldSetupPage.tsx
